<resources>
    <string name="app_name">Waiting List Clinics</string>
    <string name="hometitle_name">Queue RS CongdongCatur</string>
    <string name="name_hospital">CondongCatur Sleman</string>
    <string name="todo">todo</string>
    <string name="titlebar_registry">Daftar Account</string>
    <string name="titlebar_login">Login</string>
    <string name="hint_username">Enter username</string>
    <string name="hint_email">Enter email</string>
    <string name="hint_password">Enter password</string>
    <string name="logout_menu">Keluar</string>
    <string name="help_menu">Help</string>
    <string name="titlebar_myprofile">My Profile</string>
    <string name="titlebar_help">Help</string>
    <string name="titilebar_adddoctor">Add Dokter</string>
    <string name="str_dot">....</string>
    <string name="hint_namedr">Enter Doctor Name</string>
    <string name="hint_polidoctor">Enter Poliklinik</string>
    <string name="hint_workday">Work Day</string>
    <string name="hint_start">Start</string>
    <string name="hint_finish">The End</string>
    <string name="note_limit">NOTE : Batas -\npasien tiap hari</string>
    <string name="str_add">Tambah</string>
    <string name="str_timesetting">Set Working Time</string>
    <string name="str_emptydr">No Doctors Added Yet</string>
    <string name="titlebar_updatedoctor">Doctor Data Update</string>
    <string name="str_update">Update</string>
    <string name="str_null">Empty</string>
    <string name="str_emptyPatient">No patient registered yet pasien</string>
    <string name="titlebar_patient">Patient List</string>
    <string name="str_openeveryday">Open Daily</string>
    <string name="str_delete">Delete</string>
    <string name="str_slash">-</string>
    <string name="str_proccessing">PROCESSED</string>
    <string name="copyright">Copyright 2021</string>
    <string name="str_data_register">Registration Data</string>
    <string name="str_dokter_poliklinik">Doktor Poliklinik</string>
    <string name="str_hari_kerja">Working Days\t\t\t\t\t:</string>
    <string name="str_jam_kerja">Working Hours\t\t\t\t:</string>
    <string name="str_batas_pasien">Patient Limit\t\t:</string>
    <string name="str_pasien_hariini">View Todays Patient</string>
    <string name="titlebar_daftardokter">Doctor List</string>
    <string name="str_q1">1. What if I forget my password?</string>
    <string name="str_a1">Sorry, the application does not have a forgotten password feature, so you must register a new account.</string>
    <string name="str_q2">2. Can I use the same email for more than one account?</string>
    <string name="str_a2">No, one email is only used for one account.</string>
    <string name="str_q3">3. What if I want to delete my account?</string>
    <string name="str_a3">Sorry, for account deletion can only be done by the Admin, and cannot be deleted alone. If you want to delete an account, please contact the Admin first.</string>
    <string name="str_q4">4. What should I do, if I find a BUG/ERROR in this application?</string>
    <string name="str_a4">If you find a BUG/ERROR that occurs in the application, you can report it to the Developer via the social media link below. We are happy to receive your suggestions and criticisms to be able to build this application for the better.</string>
    <string name="str_developedby"><![CDATA[Developed by\t\t>]]></string>
    <string name="str_developer">abady_immortal</string>
    <string name="str_icondesign"><![CDATA[Icon Design by\t>]]></string>
    <string name="str_linkicon">flaticon.com</string>
    <string name="str_getwellsoon">GET WELL SOON</string>
    <string name="str_notehelp">Ketika Alarm Pemberitahuan bunyi\nTunjukkan Data Pendaftaran Anda \nkepada Admin / Asisten Dokter ya :)</string>
    <string name="str_ambil_antrian">Take Queue</string>
    <string name="str_info_antrian">MY QUEUE INFO</string>
    <string name="str_emptypickqueue">YOU HAVE NOT TAKEN A QUESTION</string>
    <string name="str_wellcomehome">Welcome\nIN QUESTION APP</string>
    <string name="str_gws_home">HOPE YOU GET HURRY UP</string>
    <string name="str_masuk">Login</string>
    <string name="str_notyet_akun">Dont have an account yet?</string>
    <string name="str_daftar">Daftar</string>
    <string name="str_detail_pasien">Patient Detail</string>
    <string name="str_asalrujukan">Reference Origin\t\t\t\t\t\t\t\t:</string>
    <string name="str_no_rekammedis">Medical Record Number\t\t\t:</string>
    <string name="str_carapembayaran">Payment Method\t\t\t\t\t:</string>
    <string name="str_umur">Age / Type\t\t\t\t\t\t:</string>
    <string name="str_slash_umurjenis">/</string>
    <string name="str_waktu_daftar">Registration Time\t\t\t\t\t\t\t\t:</string>
    <string name="str_estimasi">Estimate Called\t\t\t\t:</string>
    <string name="str_gws_details">HOPE YOU GET HURRY UP</string>
    <string name="str_note_details">Ketika Alarm Pemberitahuan bunyi\nTunjukkan Data Pendaftaran ini \nkepada Admin / Asisten Dokter ya.</string>
    <string name="str_form_pendaftaran">Queue List Form</string>
    <string name="hint_estimasi">Estimate Called</string>
    <string name="hint_nama_pasien">Patient Name</string>
    <string name="hint_norekammedis_pasien">Medical Record Number</string>
    <string name="hint_cara_pembayaran">Payment Method (general/bpjs)</string>
    <string name="hint_asal_rujukan">Reference Origin (independent/referred)</string>
    <string name="hint_umur_pasien">Age (mis: 21 Thn)</string>
    <string name="hint_jenis_pasien">Gender (L/P)</string>
    <string name="hint_pilih_poliklinik">Choose Polyclinic</string>
    <string name="str_pilih_aksi">Please Select Action</string>
    <string name="str_edit">Edit</string>
    <string name="str_perkiraan">Estimate Called\t :</string>
    <string name="str_number">1</string>
    <string name="str_estimasi_queue">Estimate Called\nAt oclock:</string>
    <string name="str_time_queue">00 : 00</string>
    <string name="str_wib">WIB</string>
    <string name="str_cek_detail">Check Detail</string>
    <string name="titlebar_detaildokter">Doctor Details</string>
</resources>