<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.Activity.HelpActivity">

    <include
        android:id="@+id/topbar_help"
        layout="@layout/topbar_primary" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/titlebar_help"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/titlebar_help"
            android:textAlignment="center"
            android:textColor="#fff"
            android:textSize="18sp" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_below="@+id/topbar_help"
        android:layout_centerHorizontal="true">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_qna_help"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_margin="15dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="10dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="10dp">

                    <TextView
                        android:id="@+id/question1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginEnd="20dp"
                        android:text="@string/str_q1"
                        android:textColor="@color/colorBlack"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/answer1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/question1"
                        android:layout_marginStart="30dp"
                        android:layout_marginEnd="20dp"
                        android:text="@string/str_a1"
                        android:textColor="@color/colorBlack" />

                    <TextView
                        android:id="@+id/question2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/answer1"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="20dp"
                        android:text="@string/str_q2"
                        android:textColor="@color/colorBlack"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/answer2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/question2"
                        android:layout_marginStart="30dp"
                        android:layout_marginEnd="20dp"
                        android:text="@string/str_a2"
                        android:textColor="@color/colorBlack" />

                    <TextView
                        android:id="@+id/question3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/answer2"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="20dp"
                        android:text="@string/str_q3"
                        android:textColor="@color/colorBlack"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/answer3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/question3"
                        android:layout_marginStart="30dp"
                        android:layout_marginEnd="20dp"
                        android:text="@string/str_a3"
                        android:textColor="@color/colorBlack" />

                    <TextView
                        android:id="@+id/question4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/answer3"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="20dp"
                        android:text="@string/str_q4"
                        android:textColor="@color/colorBlack"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/answer4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/question4"
                        android:layout_marginStart="30dp"
                        android:layout_marginEnd="20dp"
                        android:text="@string/str_a4"
                        android:textColor="@color/colorBlack" />

                    <TextView
                        android:id="@+id/developerby"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/answer4"
                        android:layout_marginStart="30dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="10dp"
                        android:text="@string/str_developedby"
                        android:textColor="@color/colorBlack" />

                    <LinearLayout
                        android:id="@+id/developer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/answer4"
                        android:layout_marginTop="20dp"
                        android:layout_toEndOf="@+id/developerby"
                        android:orientation="horizontal"
                        tools:ignore="UseCompoundDrawables">

                        <ImageView
                            android:id="@+id/icon_igAdmin"
                            android:layout_width="18dp"
                            android:layout_height="18dp"
                            android:layout_marginTop="2dp"
                            android:contentDescription="@string/todo"
                            android:src="@drawable/icon_instagram" />

                        <TextView
                            android:id="@+id/username_igAdmin"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_marginEnd="20dp"
                            android:text="@string/str_developer"
                            android:textColor="@color/colorPrimary" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/icondesignby"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/developerby"
                        android:layout_marginStart="30dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="10dp"
                        android:text="@string/str_icondesign"
                        android:textColor="@color/colorBlack" />

                    <LinearLayout
                        android:id="@+id/icondesign"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/developer"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="20dp"
                        android:layout_toEndOf="@+id/icondesignby"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/link_flatIcon"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="20dp"
                            android:text="@string/str_linkicon"
                            android:textColor="@color/colorPrimary" />
                    </LinearLayout>
                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_note_help"
                android:layout_width="350dp"
                android:layout_height="120dp"
                android:layout_below="@+id/cv_qna_help"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="15dp"
                android:layout_marginTop="1dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="15dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="7dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/getwellsoon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="15dp"
                        android:text="@string/str_getwellsoon"
                        android:textAlignment="center"
                        android:textColor="@color/colorPrimary"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/note"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/getwellsoon"
                        android:layout_centerHorizontal="true"
                        android:text="@string/str_notehelp"
                        android:textAlignment="center"
                        android:textColor="@color/colorOrange"
                        android:textSize="16sp" />
                </RelativeLayout>

            </androidx.cardview.widget.CardView>
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>