<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cv_dialog"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="15dp"
    app:cardCornerRadius="35dp"
    app:cardElevation="10dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:padding="1dp">

        <TextView
            android:id="@+id/tv_choice_action"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:text="@string/str_pilih_aksi"
            android:textColor="@color/colorBlack"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btnEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_choice_action"
            android:background="@drawable/bg_round_white"
            android:text="@string/str_edit"
            android:textColor="@color/colorPrimary" />

        <Button
            android:id="@+id/btnDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_choice_action"
            android:layout_alignParentEnd="true"
            android:background="@drawable/bg_round_white"
            android:text="@string/str_delete"
            android:textColor="@color/colorPrimary" />
    </RelativeLayout>

</androidx.cardview.widget.CardView>