<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.Activity.DoctorListActivity">

    <include
        android:id="@+id/topbar_patientlist"
        layout="@layout/topbar_primary" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/btnback_patientlist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/ic_back_white" />

        <TextView
            android:id="@+id/titlebar_patientlist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/titlebar_patient"
            android:textAlignment="center"
            android:textColor="#fff"
            android:textSize="18sp" />
    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_patientlist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/topbar_patientlist"
        android:paddingTop="5dp"
        android:paddingBottom="10dp"
        tools:itemCount="6"
        tools:listitem="@layout/list_item_patient" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true" />

    <TextView
        android:id="@+id/tv_emptyPatient"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/str_emptyPatient"
        android:textColor="@color/colorBlack"
        android:textSize="16sp"
        android:visibility="gone" />
</RelativeLayout>