<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_patientlist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        app:cardElevation="1dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/civ_patientlist"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:contentDescription="@string/todo"
                android:padding="10dp"
                android:src="@drawable/icon_default_profile"
                app:civ_border_color="@color/colorPrimary"
                app:civ_border_width="0.5dp" />

            <TextView
                android:id="@+id/tv_name_patientlist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_toEndOf="@+id/civ_patientlist"
                android:text="@string/str_dot"
                android:textColor="@color/colorBlack"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:ignore="RelativeOverlap" />

            <TextView
                android:id="@+id/tv_estimationfinish"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_name_patientlist"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@+id/civ_patientlist"
                android:text="@string/str_perkiraan"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tv_estimationfinish_patientlist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_name_patientlist"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@+id/tv_estimationfinish"
                android:text="@string/str_dot"
                android:textColor="@color/colorPrimary"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_queuesort_patientlist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="20dp"
                android:background="@drawable/bg_round_white"
                android:paddingStart="10dp"
                android:paddingTop="4dp"
                android:paddingEnd="10dp"
                android:paddingBottom="4dp"
                android:text="@string/str_number"
                android:textSize="13sp" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>